--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon ./dist/index.js",
+    "watch": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@types/node": "^18.7.16",
     "nodemon": "^2.0.19",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "dependencies": {
