--- a/package.json
+++ b/package.json
@@ -1,32 +1,26 @@
 {
-  "name": "backendcoderhouse",
+  "name": "class-16",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon ./dist/index.js",
-    "watch": "tsc -w",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/nicolascostanza/BackendCoderHouse.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/nicolascostanza/BackendCoderHouse/issues"
   },
   "homepage": "https://github.com/nicolascostanza/BackendCoderHouse#readme",
-  "devDependencies": {
-    "@types/node": "^18.7.16",
-    "nodemon": "^2.0.19",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
-  },
   "dependencies": {
-    "@types/express": "^4.17.13",
-    "express": "^4.18.1"
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1"
   }
 }
